[package]
name = "flick"
version = "0.0.1"
authors = ["Chad Baxter <cbaxter@mail.umw.edu>"]
edition = "2018"
license = "GPL-2.0+"
description = "Flick time constant library"
repository = "https://github.com/LogoiLab/flick/"
homepage = "https://github.com/LogoiLab/flick"
documentation = "https://github.com/LogoiLab/flick"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]